Reescalado, interfaz y varias cosas más

--- a/Resources/VirusMadre_sheet.plist
+++ b/Resources/VirusMadre_sheet.plist
@@ -4,31 +4,31 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>Virus01.png</key>
+            <key>VirusMadre01.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,2},{42,28}}</string>
+                <string>{{2,2},{44,38}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{42,28}}</string>
+                <string>{{0,0},{44,38}}</string>
                 <key>sourceSize</key>
-                <string>{42,28}</string>
+                <string>{44,38}</string>
             </dict>
-            <key>Virus02.png</key>
+            <key>VirusMadre02.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{46,2},{42,28}}</string>
+                <string>{{48,2},{44,38}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{42,28}}</string>
+                <string>{{0,0},{44,38}}</string>
                 <key>sourceSize</key>
-                <string>{42,28}</string>
+                <string>{44,38}</string>
             </dict>
         </dict>
         <key>metadata</key>
@@ -36,13 +36,13 @@
             <key>format</key>
             <integer>2</integer>
             <key>realTextureFileName</key>
-            <string>Virus_sheet.png</string>
+            <string>VirusMadre_sheet.png</string>
             <key>size</key>
-            <string>{91,32}</string>
+            <string>{94,42}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:e322e49d621887de274c9717c76cde20:957e1965a0af40f445ec38e9f6c2bb6c:94d1ad7e30f9e62d3a8033dfdd2c2608$</string>
+            <string>$TexturePacker:SmartUpdate:5e185c4d0c40447e38ffe3e612b26559:b3de512bfa15e429645c8c1f54306d64:6a6656ab5aad22e303d24c3b43350829$</string>
             <key>textureFileName</key>
-            <string>Virus_sheet.png</string>
+            <string>VirusMadre_sheet.png</string>
         </dict>
     </dict>
 </plist>
